Created inital repository files

--- a/MedicalClinic.API/appsettings.json
+++ b/MedicalClinic.API/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
+  "ConnectionString": {
+    "MedicalClinicDB": "Data Source=localhost\\sqlexpress;Initial Catalog=MedicalClinicDB;User ID=sa;Password="
+  },
   "AllowedHosts": "*"
 }
