Added business logic with unit tests

--- a/MedicalClinic.Business.Services/MedicalClinic.Business.Services.csproj
+++ b/MedicalClinic.Business.Services/MedicalClinic.Business.Services.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MedicalClinic.DataAccess\MedicalClinic.DataAccess.csproj" />
+    <ProjectReference Include="..\MedicalClinic.Models\MedicalClinic.Models.csproj" />
+  </ItemGroup>
+
 </Project>
