--- a/MedicalClinic.API/appsettings.json
+++ b/MedicalClinic.API/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "ConnectionString": {
-    "MedicalClinicDB": "Data Source=localhost\\sqlexpress;Initial Catalog=MedicalClinicDB;User ID=sa;Password=UVAir*1151942899"
+    "MedicalClinicDB": "Data Source=localhost\\sqlexpress;Initial Catalog=MedicalClinicDB;User ID=sa;Password="
   },
   "AllowedHosts": "*"
 }
