--- a/MedicalClinic.UnitTest.Services/MedicalClinic.UnitTest.Services.csproj
+++ b/MedicalClinic.UnitTest.Services/MedicalClinic.UnitTest.Services.csproj
@@ -8,8 +8,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
+    <PackageReference Include="Moq" Version="4.14.5" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MedicalClinic.API\MedicalClinic.API.csproj" />
+    <ProjectReference Include="..\MedicalClinic.Business.Services\MedicalClinic.Business.Services.csproj" />
+    <ProjectReference Include="..\MedicalClinic.DataAccess\MedicalClinic.DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
