--- a/MedicalClinic.API/appsettings.json
+++ b/MedicalClinic.API/appsettings.json
@@ -7,5 +7,10 @@
   "ConnectionString": {
     "MedicalClinicDB": "Data Source=localhost\\sqlexpress;Initial Catalog=MedicalClinicDB;User ID=sa;Password="
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "ValidAudience": "http://localhost:3000",
+    "ValidIssuer": "http://localhost:44345",
+    "Secret": "SECRECT"
+  }
 }
