Added service to authenticate users

--- a/MedicalClinic.API/appsettings.json
+++ b/MedicalClinic.API/appsettings.json
@@ -11,6 +11,6 @@
   "JWT": {
     "ValidAudience": "http://localhost:3000",
     "ValidIssuer": "http://localhost:44345",
-    "Secret": "SECRECT"
+    "Secret": "SECRECTKEYFORHANDLINGJWT"
   }
 }
